MDEV-15155 - ReadView::is_open() assertion failure

ReadView::is_open() was supposed to be called by view owner thread
exclusively. Use ReadView::get_state() instead.